Fix: Herobanner Alignment

--- a/frontend/src/LandingPage/HeroBanner/HeroBanner.css
+++ b/frontend/src/LandingPage/HeroBanner/HeroBanner.css
@@ -4,6 +4,10 @@
     width: 100%;
 }
 
+.hero #button {
+    margin-top: 4rem;
+}
+
 .hero__bg {
     position: absolute;
     top: 0;
@@ -96,5 +100,6 @@
     }
     .hero__text {
         margin-bottom: 40% !important;
+        text-align: center;
     }
 }
